examples/test/testpolicy18458.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18458
  namespace: namespace399
spec:
  podSelector:
    matchLabels:
      key22: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value21
          key27: value28
      podSelector:
        matchLabels:
          key5: value2
          key1: value15
